--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,9 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <dependencies>
 
@@ -42,6 +45,11 @@
             <version>1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>native2ascii-maven-plugin</artifactId>
+            <version>2.0.1</version>
+        </dependency>
 
         <dependency>
             <groupId>taglibs</groupId>
