--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,22 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+        <groupId>org.webjars</groupId>
+        <artifactId>bootstrap</artifactId>
+        <version>4.1.3</version>
+    </dependency>
+
+    <dependency>
+
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
         <dependency>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>native2ascii-maven-plugin</artifactId>
